--- a/lesson_1/CMakeLists.txt
+++ b/lesson_1/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required(VERSION 3.16)
-project(lesson_1 LANGUAGES CXX)
+project(lesson_1 VERSION 1.0.0 LANGUAGES CXX)
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(Qt6 REQUIRED COMPONENTS Quick)
 
+qt_standard_project_setup()
+
 qt_add_executable(lesson_1
     main.cpp
-)
-
-qt_add_resources(lesson_1 "qml"
-    PREFIX "/"
-    FILES main.qml
 )
 
 target_link_libraries(lesson_1 PRIVATE Qt6::Quick)
